[workspace]
resolver = "2"
members = [
  "crates/futarchy-fixed",
  "crates/futarchy-primitives",
  "crates/attestor-core",
  "crates/conditional-ledger-core",
  "crates/constitution-core",
  "crates/epoch-core",
  "crates/execution-guard-core",
  "crates/futarchy-treasury-core",
  "crates/guardian-core",
  "crates/market-core",
  "crates/oracle-core",
  "crates/origins-core",
  "crates/registry-core",
  "crates/welfare-core",
  "pallets/constitution",
  "pallets/conditional-ledger",
  "pallets/market",
  "pallets/origins",
  "pallets/oracle",
  "pallets/registry",
  "pallets/futarchy-treasury",
  "pallets/guardian",
  "pallets/attestor",
  "pallets/welfare",
  "pallets/epoch",
  "pallets/execution-guard",
  "runtime/bleavit-runtime",
  "runtime/bleavit-xcm",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/bleavit/bleavit"

[workspace.dependencies]
# FRAME crates on the `polkadot-stable2603` release train (01 §9; PLAN V-1).
# The polkadot-sdk 2603.0.0 umbrella crate is the *version source* for these
# pins (its manifest names this exact family), but it must NOT be depended on
# directly: lockfile resolution drags the whole node stack in
# (sc-service → litep2p → multihash → yanked core2 0.4.0) and fails.
# Versions are `=`-exact so `cargo update` cannot silently drift the SDK mix
# before the B1a runtime assembly (Codex adversarial-review finding, 2026-07-15);
# frame-support 46.0.1 is the train's crates.io patch release, tested here.
frame-support = { version = "=46.0.1", default-features = false }
frame-system = { version = "=46.0.0", default-features = false }
frame-benchmarking = { version = "=46.0.0", default-features = false }
sp-runtime = { version = "=46.0.0", default-features = false }
sp-io = { version = "=45.0.0", default-features = false }
sp-core = { version = "=40.0.0", default-features = false }
# XCM crates on the same `polkadot-stable2603` family (B4; pins read from the
# polkadot-sdk 2603.0.0 umbrella manifest via crates.io, 2026-07-16 — see
# PLAN.md · Verification log). Runtime-side only; none drags the node stack.
staging-xcm = { version = "=22.0.0", default-features = false }
staging-xcm-builder = { version = "=26.0.0", default-features = false }
staging-xcm-executor = { version = "=25.0.0", default-features = false }
pallet-xcm = { version = "=26.0.0", default-features = false }
cumulus-primitives-core = { version = "=0.24.0", default-features = false }
# Test-only SDK crates for pallet mock runtimes (fungibles collateral mocks).
pallet-assets = { version = "=49.0.1", default-features = false }
pallet-balances = { version = "=47.0.0", default-features = false }
