[workspace]
resolver = "2"
# `keeper/` is a deliberately separate cargo workspace (B9): the off-chain keeper
# needs subxt's dependency tree, which must never perturb the `=`-exact
# polkadot-stable2603 pins of this runtime workspace (01 §9; PLAN V-1).
exclude = ["keeper"]
members = [
  "crates/futarchy-fixed",
  "crates/futarchy-primitives",
  "crates/attestor-core",
  "crates/conditional-ledger-core",
  "crates/constitution-core",
  "crates/epoch-core",
  "crates/execution-guard-core",
  "crates/futarchy-treasury-core",
  "crates/guardian-core",
  "crates/market-core",
  "crates/oracle-core",
  "crates/origins-core",
  "crates/registry-core",
  "crates/welfare-core",
  "pallets/constitution",
  "pallets/conditional-ledger",
  "pallets/market",
  "pallets/origins",
  "pallets/oracle",
  "pallets/registry",
  "pallets/futarchy-treasury",
  "pallets/guardian",
  "pallets/attestor",
  "pallets/inflow-caps",
  "pallets/welfare",
  "pallets/epoch",
  "pallets/execution-guard",
  "runtime/bleavit-runtime",
  "runtime/bleavit-xcm",
  "runtime-api",
  "node/bleavit-node",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/bleavit/bleavit"

[workspace.dependencies]
# FRAME crates on the `polkadot-stable2603` release train (01 §9; PLAN V-1).
# The polkadot-sdk 2603.0.0 umbrella crate is the *version source* for these
# pins (its manifest names this exact family), but it must NOT be depended on
# directly: lockfile resolution drags the whole node stack in
# (sc-service → litep2p → multihash → yanked core2 0.4.0) and fails.
# Versions are `=`-exact so `cargo update` cannot silently drift the SDK mix
# before the B1a runtime assembly (Codex adversarial-review finding, 2026-07-15);
# frame-support 46.0.1 is the train's crates.io patch release, tested here.
frame-support = { version = "=46.0.1", default-features = false }
frame-system = { version = "=46.0.0", default-features = false }
frame-benchmarking = { version = "=46.0.0", default-features = false }
# Runtime-benchmark helper shims (B5): system `set_code` + parachain session
# benchmarks need these SDK-side harness crates; versions from the same train.
frame-system-benchmarking = { version = "=46.0.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "=27.0.0", default-features = false }
# Runtime API declarations on the same `polkadot-stable2603` release train.
sp-api = { version = "=41.0.0", default-features = false }
sp-runtime = { version = "=46.0.0", default-features = false }
sp-io = { version = "=45.0.0", default-features = false }
sp-core = { version = "=40.0.0", default-features = false }
# Test-only SDK crates for pallet mock runtimes (fungibles collateral mocks).
pallet-assets = { version = "=49.0.1", default-features = false }
pallet-balances = { version = "=47.0.0", default-features = false }
cumulus-pallet-aura-ext = { version = "=0.26.0", default-features = false }
cumulus-pallet-parachain-system = { version = "=0.26.0", default-features = false }
cumulus-pallet-xcm = { version = "=0.25.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "=0.26.0", default-features = false }
cumulus-primitives-aura = { version = "=0.22.0", default-features = false }
cumulus-primitives-core = { version = "=0.24.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "=0.24.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "=17.0.0", default-features = false }
cumulus-primitives-utility = { version = "=0.26.0", default-features = false }
cumulus-test-relay-sproof-builder = { version = "=0.25.0" }
frame-executive = { version = "=46.0.0", default-features = false }
frame-metadata-hash-extension = { version = "=0.14.0", default-features = false }
frame-system-rpc-runtime-api = { version = "=41.0.0", default-features = false }
frame-try-runtime = { version = "=0.52.0", default-features = false }
pallet-asset-tx-payment = { version = "=46.0.0", default-features = false }
pallet-aura = { version = "=45.0.0", default-features = false }
pallet-authorship = { version = "=46.0.0", default-features = false }
pallet-collator-selection = { version = "=27.0.0", default-features = false }
pallet-conviction-voting = { version = "=46.0.0", default-features = false }
pallet-message-queue = { version = "=49.0.0", default-features = false }
pallet-migrations = { version = "=16.0.0", default-features = false }
pallet-multisig = { version = "=46.0.0", default-features = false }
pallet-preimage = { version = "=46.0.0", default-features = false }
pallet-proxy = { version = "=46.0.0", default-features = false }
pallet-referenda = { version = "=46.0.0", default-features = false }
pallet-scheduler = { version = "=47.0.0", default-features = false }
pallet-session = { version = "=46.0.0", default-features = false }
pallet-sudo = { version = "=46.0.0", default-features = false }
pallet-timestamp = { version = "=45.0.0", default-features = false }
pallet-transaction-payment = { version = "=46.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "=46.0.0", default-features = false }
pallet-utility = { version = "=46.0.0", default-features = false }
pallet-vesting = { version = "=46.0.0", default-features = false }
pallet-xcm = { version = "=26.0.0", default-features = false }
parachains-common = { version = "=28.0.0", default-features = false }
polkadot-runtime-common = { version = "=25.0.0", default-features = false }
sp-block-builder = { version = "=41.0.0", default-features = false }
sp-consensus-aura = { version = "=0.47.0", default-features = false }
sp-genesis-builder = { version = "=0.22.0", default-features = false }
sp-inherents = { version = "=41.0.0", default-features = false }
sp-offchain = { version = "=41.0.0", default-features = false }
sp-session = { version = "=43.0.0", default-features = false }
sp-transaction-pool = { version = "=41.0.0", default-features = false }
sp-version = { version = "=44.0.0", default-features = false }
staging-parachain-info = { version = "=0.26.0", default-features = false }
staging-xcm = { version = "=22.0.0", default-features = false }
staging-xcm-builder = { version = "=26.0.0", default-features = false }
staging-xcm-executor = { version = "=25.1.0", default-features = false }
substrate-wasm-builder = { version = "=32.0.0" }
# Test-only runtime dev-deps (block-execution smoke harness).
sp-keyring = { version = "=46.0.0" }
sp-tracing = { version = "=19.0.0" }
# Collator node (B3): the omni-node library is the whole node stack; the
# stable2603 family version is 0.14.x (umbrella-manifest sourced, like the
# pins above).
polkadot-omni-node-lib = { version = "=0.14.1" }

# Every published `core2` version is yanked on crates.io, but the node stack
# hard-requires it (sc-network → litep2p → multihash → core2). The vendored
# byte-for-byte copy of the published 0.4.0 package keeps resolution
# deterministic and auditable — see vendor/README.md.
[patch.crates-io]
core2 = { path = "vendor/core2-0.4.0" }
