[workspace]
resolver = "2"
# `keeper/` and `fuzz/` are deliberately separate cargo workspaces: their
# off-chain/nightly dependency trees must never perturb the `=`-exact
# polkadot-stable2606 pins of this runtime workspace (01 §9; PLAN V-1).
exclude = ["keeper", "fuzz"]
members = [
  "crates/futarchy-fixed",
  "crates/futarchy-primitives",
  "crates/attestor-core",
  "crates/conditional-ledger-core",
  "crates/constitution-core",
  "crates/epoch-core",
  "crates/execution-guard-core",
  "crates/futarchy-treasury-core",
  "crates/guardian-core",
  "crates/market-core",
  "crates/oracle-core",
  "crates/origins-core",
  "crates/registry-core",
  "crates/welfare-core",
  "pallets/constitution",
  "pallets/conditional-ledger",
  "pallets/market",
  "pallets/origins",
  "pallets/oracle",
  "pallets/registry",
  "pallets/futarchy-treasury",
  "pallets/guardian",
  "pallets/attestor",
  "pallets/inflow-caps",
  "pallets/welfare",
  "pallets/epoch",
  "pallets/execution-guard",
  "runtime/bleavit-runtime",
  "runtime/bleavit-xcm",
  "runtime-api",
  "node/bleavit-node",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/bleavit/bleavit"

[workspace.dependencies]
# FRAME crates on the `polkadot-stable2606` release train (01 §9; PLAN V-1;
# the B11 line-move adoption is in PLAN's Verification log).
# The polkadot-sdk 2606.0.0 umbrella crate is the *version source* for these
# pins (its manifest names this exact family), but it must NOT be depended on
# directly: lockfile resolution drags the whole node stack in.
# Versions are `=`-exact so `cargo update` cannot silently drift the SDK mix
# (Codex adversarial-review finding, 2026-07-15); at adoption (2026-07-17) no
# crate in the family had a crates.io patch release beyond the umbrella's own
# versions, so every pin is the umbrella-named version verbatim.
frame-support = { version = "=48.0.0", default-features = false }
frame-system = { version = "=48.0.0", default-features = false }
frame-benchmarking = { version = "=49.0.0", default-features = false }
# Runtime-benchmark helper shims (B5): system `set_code` + parachain session
# benchmarks need these SDK-side harness crates; versions from the same train.
frame-system-benchmarking = { version = "=49.0.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "=30.0.0", default-features = false }
# Runtime API declarations on the same `polkadot-stable2606` release train.
sp-api = { version = "=43.0.0", default-features = false }
sp-runtime = { version = "=48.0.0", default-features = false }
sp-io = { version = "=48.0.0", default-features = false }
sp-core = { version = "=43.0.0", default-features = false }
# Test-only SDK crates for pallet mock runtimes (fungibles collateral mocks).
pallet-assets = { version = "=52.0.0", default-features = false }
pallet-balances = { version = "=50.0.0", default-features = false }
cumulus-pallet-aura-ext = { version = "=0.29.0", default-features = false }
cumulus-pallet-parachain-system = { version = "=0.29.0", default-features = false }
cumulus-pallet-xcm = { version = "=0.27.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "=0.30.0", default-features = false }
cumulus-primitives-aura = { version = "=0.24.0", default-features = false }
cumulus-primitives-core = { version = "=0.26.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "=0.26.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "=20.0.0", default-features = false }
cumulus-primitives-utility = { version = "=0.30.0", default-features = false }
cumulus-test-relay-sproof-builder = { version = "=0.27.0" }
frame-executive = { version = "=48.0.0", default-features = false }
frame-metadata-hash-extension = { version = "=0.16.0", default-features = false }
frame-system-rpc-runtime-api = { version = "=43.0.0", default-features = false }
frame-try-runtime = { version = "=0.54.0", default-features = false }
pallet-asset-tx-payment = { version = "=49.0.0", default-features = false }
pallet-aura = { version = "=48.0.0", default-features = false }
pallet-authorship = { version = "=48.0.0", default-features = false }
pallet-collator-selection = { version = "=30.0.0", default-features = false }
pallet-conviction-voting = { version = "=49.0.0", default-features = false }
pallet-message-queue = { version = "=52.0.0", default-features = false }
pallet-migrations = { version = "=19.0.0", default-features = false }
pallet-multisig = { version = "=49.0.0", default-features = false }
pallet-preimage = { version = "=49.0.0", default-features = false }
pallet-proxy = { version = "=49.0.0", default-features = false }
pallet-referenda = { version = "=49.0.0", default-features = false }
pallet-scheduler = { version = "=50.0.0", default-features = false }
pallet-session = { version = "=49.0.0", default-features = false }
pallet-sudo = { version = "=49.0.0", default-features = false }
pallet-timestamp = { version = "=48.0.0", default-features = false }
pallet-transaction-payment = { version = "=49.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "=49.0.0", default-features = false }
pallet-utility = { version = "=49.0.0", default-features = false }
pallet-vesting = { version = "=49.0.0", default-features = false }
pallet-xcm = { version = "=29.0.0", default-features = false }
parachains-common = { version = "=32.0.0", default-features = false }
polkadot-runtime-common = { version = "=29.0.0", default-features = false }
sp-block-builder = { version = "=43.0.0", default-features = false }
sp-consensus-aura = { version = "=0.49.0", default-features = false }
sp-genesis-builder = { version = "=0.24.0", default-features = false }
sp-inherents = { version = "=43.0.0", default-features = false }
sp-offchain = { version = "=43.0.0", default-features = false }
sp-session = { version = "=45.0.0", default-features = false }
sp-transaction-pool = { version = "=43.0.0", default-features = false }
sp-version = { version = "=46.0.0", default-features = false }
staging-parachain-info = { version = "=0.28.0", default-features = false }
staging-xcm = { version = "=24.0.0", default-features = false }
staging-xcm-builder = { version = "=29.0.0", default-features = false }
staging-xcm-executor = { version = "=28.0.0", default-features = false }
substrate-wasm-builder = { version = "=34.0.0" }
# Test-only runtime dev-deps (block-execution smoke harness).
sp-keyring = { version = "=48.0.0" }
sp-tracing = { version = "=19.0.0" }
# Collator node (B3): the omni-node library is the whole node stack; the
# stable2606 family version is 0.18.x (umbrella-manifest sourced, like the
# pins above).
polkadot-omni-node-lib = { version = "=0.18.0" }
