[workspace]
members = ["bleavit-keeper"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
prometheus = { version = "0.13.4", default-features = false }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
scale-info = { version = "2.11.6", features = ["derive"] }
subxt = "0.44.3"
subxt-signer = { version = "0.44.3", features = ["sr25519", "subxt"] }
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
