[package]
name = "futarchy-fixed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["futarchy-primitives/std"]

[dependencies]
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
