[package]
name = "market-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futarchy-fixed = { path = "../../crates/futarchy-fixed", default-features = false }
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
conditional-ledger-core = { path = "../conditional-ledger-core", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
  "futarchy-fixed/std",
  "futarchy-primitives/std",
  "conditional-ledger-core/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
runtime-benchmarks = []

[dev-dependencies]
proptest = "1.11.0"
serde_json = "1.0.140"
