[package]
name = "welfare-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futarchy-fixed = { path = "../../crates/futarchy-fixed", default-features = false }
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

[features]
default = ["std"]
# no_std-capable serde for the FRAME genesis carrier (`MetricSpec`): the Wasm
# runtime's GenesisBuilder needs Serialize/Deserialize without `std`.
serde = ["dep:serde"]
std = [
  "futarchy-fixed/std",
  "futarchy-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde",
  "serde/std",
]
runtime-benchmarks = []
