[package]
name = "bleavit-keeper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Permissionless off-chain crank service for the Bleavit parachain"

[lib]
name = "bleavit_keeper"
path = "src/lib.rs"

[[bin]]
name = "bleavit-keeper"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
parity-scale-codec.workspace = true
scale-info.workspace = true
