[package]
name = "bleavit-node"
version = "0.1.0"
description = "Bleavit collator node — the polkadot-omni-node stack branded for the Bleavit parachain (B3; 01 §4.2)"
authors = ["Bleavit"]
edition.workspace = true
license.workspace = true
repository.workspace = true

# The runtime is deliberately NOT a dependency: omni-node executes whatever
# runtime the chain spec carries (02 §11 release artifacts pair a spec with a
# reproducibly-built wasm), so node and runtime version independently.
[dependencies]
polkadot-omni-node-lib = { workspace = true }
