[package]
name = "pallet-execution-guard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
execution-guard-core = { path = "../../crates/execution-guard-core", default-features = false }
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
pallet-attestor = { path = "../attestor", default-features = false }
pallet-conditional-ledger = { path = "../conditional-ledger", default-features = false }
pallet-epoch = { path = "../epoch", default-features = false }
pallet-guardian = { path = "../guardian", default-features = false }
pallet-origins = { path = "../origins", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["execution-guard-core/std", 
  "futarchy-primitives/std",
  "pallet-attestor/std",
  "pallet-conditional-ledger/std",
  "pallet-epoch/std",
  "pallet-guardian/std",
  "pallet-origins/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
runtime-benchmarks = []
