[package]
name = "pallet-futarchy-treasury"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = [
  "futarchy-primitives/std",
  "pallet-origins/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
runtime-benchmarks = []

[dependencies]
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
pallet-origins = { path = "../origins", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
