[package]
name = "pallet-market"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
market-core = { path = "../../crates/market-core", default-features = false }
futarchy-fixed = { path = "../../crates/futarchy-fixed", default-features = false }
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
pallet-conditional-ledger = { path = "../conditional-ledger", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, default-features = true }
pallet-assets = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "market-core/std",
  "futarchy-fixed/std",
  "futarchy-primitives/std",
  "pallet-conditional-ledger/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking?/std",
  "sp-runtime/std",
  "pallet-assets/std",
  "pallet-balances/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-conditional-ledger/runtime-benchmarks",
  "pallet-assets/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-conditional-ledger/try-runtime",
  "sp-runtime/try-runtime",
]
