[package]
name = "pallet-origins"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futarchy-primitives = { path = "../../crates/futarchy-primitives", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
  "futarchy-primitives/std",
  "parity-scale-codec/std",
  "scale-info/std",
]
runtime-benchmarks = []
try-runtime = []
bootstrap = []
